objects/Confi_OBJ1__c.object
<CustomObject>
    <description>Modify test for ci jobs</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>Confi OBJ1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Text__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Confi OBJ1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confi OBJ1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>